# chissu-pam

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release-deb.yml  release.yml  rust.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
crates/chissu-cli/: Cargo.toml
crates/chissu-cli/src/: auto_enroll.rs  capture.rs  cli.rs  config.rs  doctor.rs  faces.rs  keyring.rs  lib.rs  main.rs  output.rs
crates/chissu-cli/src/commands/: doctor.rs  enroll.rs  faces.rs  keyring.rs  mod.rs
crates/chissu-cli/tests/: README.md  capture_handler.rs  command_dispatch.rs  doctor_handler.rs  enroll_handler.rs  faces_handler.rs  keyring_handler.rs
crates/chissu-config/: Cargo.toml
crates/chissu-config/src/: lib.rs
crates/chissu-face-core/: Cargo.toml
crates/chissu-face-core/src/: capture.rs  errors.rs  faces.rs  lib.rs  secret_service.rs
crates/chissu-face-core/src/capture/: device.rs
crates/chissu-face-core/src/faces/: comparer.rs  enrollment.rs  extractor.rs  mod.rs  store.rs
crates/chissu-face-core/tests/: README.md  faces_facade.rs
crates/pam-chissu/: Cargo.toml
crates/pam-chissu/src/: lib.rs  logind.rs  secret_helper.rs
crates/pam-chissu/tests/: README.md
docs/: chissu-cli.md  manual-testing.md  packaging.md  pam-auth.md  release-notes.md  releasing.md
docs/specs/: chissu-cli-capture.md  chissu-cli-doctor.md  chissu-cli-faces.md  docs-readme.md  index.md  installer-scripts.md  packaging-deb.md  packaging-rpm.md  pam-face-auth.md  release-automation.md  workspace-structure.md
docs/users-guide/: polkit-agent-helper-troubleshooting.md
openspec/changes/add-auto-exposure-gain/: proposal.md  tasks.md
openspec/changes/add-cli-doctor/: tasks.md
openspec/changes/add-cli-secret-service-check/: proposal.md  tasks.md
openspec/changes/add-distro-aware-pam-wiring/: design.md  tasks.md
openspec/changes/add-linux-install-scripts/: tasks.md
openspec/changes/add-pam-wiring-to-packages/: tasks.md
openspec/changes/add-rpm-package-build/: proposal.md
openspec/changes/archive/2025-11-01-add-ir-capture-cli/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-add-face-compare-command/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-add-face-enrollment/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-add-face-feature-extraction/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-add-pam-face-auth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-09-update-capture-config-defaults/: proposal.md  tasks.md
openspec/changes/archive/2025-11-09-update-cli-binary-name/: tasks.md
openspec/changes/archive/2025-11-09-update-pam-chissu-target/: tasks.md
openspec/changes/archive/2025-11-09-update-project-branding/: tasks.md
openspec/changes/archive/2025-11-09-update-store-dir-config/: proposal.md
openspec/changes/archive/2025-11-10-refactor-workspace-layout/: proposal.md  tasks.md
openspec/changes/archive/2025-11-10-remove-pam-legacy-artifacts/: proposal.md  tasks.md
openspec/changes/archive/2025-11-13-add-pam-conversation-feedback/: proposal.md  tasks.md
openspec/changes/archive/2025-11-13-add-secret-service-check/: proposal.md  tasks.md
openspec/changes/archive/2025-11-14-add-config-driven-enroll/: proposal.md  tasks.md
openspec/changes/archive/2025-11-14-add-descriptor-key-enrollment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-14-refactor-capture-specs/: proposal.md  tasks.md
openspec/changes/archive/2025-11-14-refactor-pam-logger-identifier/: proposal.md  tasks.md
openspec/changes/archive/2025-11-14-refactor-shared-config-loader/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-14-update-pam-secret-service-message/: proposal.md  tasks.md
openspec/changes/archive/2025-11-14-update-secret-service-probe/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-15-rename-descriptors-to-embeddings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-15-update-readme-toc/: proposal.md  tasks.md
openspec/changes/archive/2025-11-16-add-cli-doctor/: proposal.md
openspec/changes/archive/2025-11-16-merge-infrared-into-capture/: proposal.md  tasks.md
openspec/changes/archive/2025-11-16-refactor-capture-doctor-specs/: proposal.md  tasks.md
openspec/changes/archive/2025-11-16-rename-face-capability/: proposal.md  tasks.md
openspec/changes/archive/2025-11-16-update-pam-secret-service-env/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-22-add-deb-packaging-script/: proposal.md  tasks.md
openspec/changes/archive/2025-11-22-add-release-deb-workflow/: proposal.md  tasks.md
openspec/changes/update-deb-depends-runtime-only/: proposal.md  tasks.md
openspec/changes/update-installer-fedora-support/: proposal.md
openspec/changes/update-installer-preflight-prompts/: proposal.md  tasks.md
openspec/changes/update-pam-chissu-target/: proposal.md
openspec/changes/update-project-branding/: proposal.md
openspec/changes/update-store-dir-config/: tasks.md
openspec/specs/capture-cli/: spec.md
openspec/specs/chissu-cli-capture/: spec.md
openspec/specs/chissu-cli-doctor/: spec.md
openspec/specs/chissu-cli-faces/: spec.md
openspec/specs/docs-readme/: spec.md
openspec/specs/face-features/: spec.md
openspec/specs/infrared-capture/: spec.md
openspec/specs/installer-scripts/: spec.md
openspec/specs/packaging-deb/: spec.md
openspec/specs/packaging-rpm/: spec.md
openspec/specs/pam-face-auth/: spec.md
openspec/specs/release-automation/: spec.md
openspec/specs/workspace-structure/: spec.md
pam-chissu/: Cargo.toml
pam-chissu/src/: lib.rs
pam-chissuauth/: Cargo.toml
pam-chissuauth/src/: lib.rs
scripts/: build-deb.sh  install-assets-check.sh  install-chissu.sh  pam_linker_wrapper.sh  render-install-assets.sh
scripts/lib/: install_common.sh
scripts/pam/: chissu-arch.conf
src/: capture.rs  cli.rs  config.rs  errors.rs  faces.rs  main.rs  output.rs
(+67 files in other folders)
