[workspace]
members = [
    ".",
    "crates/chissu-face-core",
    "pam-chissuauth"
]
resolver = "2"

[package]
name = "study-rust-v4l2"
version = "0.1.0"
edition = "2021"

[dependencies]
chissu-face-core = { path = "crates/chissu-face-core" }
clap = { version = "4.5", features = ["derive"] }
v4l = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dlib-face-recognition = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[patch.crates-io]
home = { path = "vendor/home/home-0.5.5" }
