[package]
name = "pam-chissuauth"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_chissuauth"
crate-type = ["cdylib"]

[dependencies]
chissu-face-core = { path = "../crates/chissu-face-core" }
libc = "0.2"
pam-sys = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
syslog = "6"
image = { version = "0.24", default-features = false, features = ["png"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
