[package]
name = "chissu-cli"
version.workspace = true
edition.workspace = true

[dependencies]
chissu-face-core = { path = "../chissu-face-core" }
chissu-config = { path = "../chissu-config" }
clap = { version = "4.5", features = ["derive"] }
v4l = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dlib-face-recognition = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
home = "0.5.12"
whoami = "1.5"
libc = "0.2"
