[package]
name = "chissu-face-core"
version.workspace = true
edition.workspace = true

[dependencies]
v4l = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dlib-face-recognition = "0.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
thiserror = "1.0"
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
base64 = "0.21"
