[package]
name = "pam-chissu"
version.workspace = true
edition.workspace = true

[lib]
name = "pam_chissu"
crate-type = ["cdylib"]

[dependencies]
chissu-face-core = { path = "../chissu-face-core" }
libc = "0.2"
pam-sys = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
syslog = "6"
image = { version = "0.24", default-features = false, features = ["png"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
