[package]
name = "pam-chissu"
version.workspace = true
edition.workspace = true

[lib]
name = "pam_chissu"
crate-type = ["cdylib"]

[dependencies]
chissu-face-core = { path = "../chissu-face-core" }
libc = "0.2"
pam-sys = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
syslog = "6"
image = { version = "0.24", default-features = false, features = ["png"] }
thiserror = "1.0"
nix = { version = "0.28", default-features = false, features = ["process", "signal", "user"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
